apps/phpldapadmin/phpldapadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  labels:
    app: phpldapadmin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: phpldapadmin
