apps/phpldapadmin/phpldapadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpldapadmin
  labels:
    app: phpldapadmin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: ldap.hzarkov.bg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpldapadmin
            port:
              number: 80
